@@ -1,8 +1,8 @@
 Package: aquamet
 Type: Package
 Title: Calculate NRSA and NLA physical habitat metrics
-Version: 2.5.6
-Date: 2023-12-28
+Version: 2.5.7
+Date: 2024-01-03
 Author: Karen Blocksom
 Depends:
     R (>= 4.0)
