@@ -12,11 +12,6 @@
 #' @description These are internal functions to aquamet and not intended for use on their own.
 #' @keywords internal
 #' @usage
-#' aquametStandardizeArgument(arg, ..., ifdf=NULL, 
-#' struct=list(SITE='integer', VALUE='double'), 
-#' rangeLimits=NULL, legalValues=NULL, stopOnError=TRUE, 
-#' metsFuncName = as.character(sys.call(sys.parent())[1]),
-#' argSavePath = NULL)) 
 #' aquametStandardizeArgument.checkLegal(arg, expectedLegal)
 #' aquametStandardizeArgument.checkRange(arg, expectedRange)
 #' aquametStandardizeArgument.checkStructure(arg, expectedStruct)
@@ -55,4 +50,9 @@
 #' uidSeparate(df, uidName, keyNames, sep='+')
 #' nlaStationInformation.islandStations(df)
 #' nlaStationInformation.stationDepths(df)
+#' #' aquametStandardizeArgument(arg, ..., ifdf=NULL, 
+#' struct=list(SITE, VALUE), 
+#' rangeLimits=NULL, legalValues=NULL, stopOnError=TRUE, 
+#' metsFuncName,
+#' argSavePath = NULL))
 NULL
